添加网络请求封装-完善基础请求

--- a/entry/src/main/module.json5
+++ b/entry/src/main/module.json5
@@ -7,6 +7,18 @@
     "deviceTypes": [
       "phone"
     ],
+    "requestPermissions":[
+      {
+        "name" : "ohos.permission.INTERNET",
+        "reason": "$string:internet_reason_desc",
+        "usedScene": {
+          "abilities": [
+            "FormAbility"
+          ],
+          "when":"inuse"
+        }
+      }
+    ],
     "deliveryWithInstall": true,
     "installationFree": false,
     "pages": "$profile:main_pages",
