添加网络请求封装-axios版本+StateComponent状态组件+首页基本功能实现

--- a/oh-package.json5
+++ b/oh-package.json5
@@ -8,5 +8,7 @@
   "description": "Please describe the basic information.",
   "main": "",
   "version": "1.0.0",
-  "dependencies": {}
+  "dependencies": {
+    "@ohos/axios": "^2.0.5",
+  }
 }
